[package]
name = "ai_api_provider"
version = "0.1.0"
edition = "2021"
description = "Multi-provider LLM API client (Anthropic, OpenAI-compat, Gemini)"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
