[package]
name = "ai_api_provider"
version = "0.1.0"
edition = "2021"
description = "Multi-provider LLM API client supporting 22 providers across Anthropic, OpenAI-compatible, and Gemini protocols"
license = "MIT"
repository = "https://github.com/weykon/ai_api_provider"
homepage = "https://github.com/weykon/ai_api_provider"
readme = "README.md"
keywords = ["llm", "api", "anthropic", "openai", "gemini"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["weykon"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
